--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     depends_on:
       - db
     volumes:
-      - /home/marcin/Desktop/C33/data:/app/data
+      - ../data:/app/data
 
   db:
     image: ankane/pgvector
