--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,20 +4,31 @@ services:
       context: ../
       dockerfile: docker/Dockerfile
     ports:
-      - "8000:8000"
+      - "8080:8000"
     depends_on:
       - db
+      - ollama
     volumes:
       - ../data:/app/data
 
   db:
-    image: ankane/pgvector
+    image: pgvector/pgvector:pg16
     environment:
-      POSTGRES_PASSWORD: password
+      POSTGRES_USER: langchain
+      POSTGRES_PASSWORD: langchain
+      POSTGRES_DB: langchain
     ports:
-      - "5433:5432"
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-volumes:
-  pgdata:
+      - "6024:5432"
 
+  ollama:
+    image: ollama/ollama:rocm
+    devices:
+      - "/dev/kfd:/dev/kfd"
+      - "/dev/dri:/dev/dri"
+    volumes:
+      - ollama:/root/.ollama
+    ports:
+      - "11434:11434"
+
+volumes:
+  ollama:
